[package]
name = "ui-forge-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
mongodb = "3.2.3"
futures = "0.3.31"
