[package]
name = "ui-forge-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
mongodb = "3.2.3"
futures = "0.3.31"
async-trait = "0.1.73"
# Better error handling
thiserror = "1.0.47"
# For timestamps and date handling
chrono = { version = "0.4.26", features = ["serde"] }
# For hashing file IDs
sha2 = "0.10.7"
hex = "0.4.3"
# BSON helpers for DateTime serialization
bson = { version = "2.7.0", features = ["chrono-0_4"] }
async-graphql = "7.0.16"
async-graphql-actix-web = "7.0.16"
actix-cors = "0.7.1"
tera = "1.19"
once_cell = "1.19"
uuid = { version = "1.6", features = ["v4"] }
actix-files = "0.6"